Añado historial de comandos en MSYS

--- a/sql/sql.vcxproj
+++ b/sql/sql.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Text Include="hist.txt" />
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
