--- a/sql/sql.vcxproj.filters
+++ b/sql/sql.vcxproj.filters
@@ -64,4 +64,8 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="grammar.y" />
+    <None Include="tokens.l" />
+  </ItemGroup>
 </Project>
