--- a/sql/sql.vcxproj
+++ b/sql/sql.vcxproj
@@ -153,7 +153,7 @@
   <ItemGroup>
     <Text Include="hist.txt" />
     <Text Include="ReadMe.txt" />
-    <Text Include="testProg.txt" />
+    <Text Include="testProg.pr" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="bt.c" />
