--- a/sql/sql.vcxproj
+++ b/sql/sql.vcxproj
@@ -174,8 +174,12 @@
     <ClInclude Include="vars.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ARCHIVOS.PR" />
+    <None Include="CONTACTS.CSV" />
     <None Include="grammar.y" />
+    <None Include="LISTADO.PR" />
     <None Include="tokens.l" />
+    <None Include="ventanas.pr" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
